@@ -11,6 +11,7 @@ Changed
  - Fix a bug in how Sesame connections load the default graph
  - Fix a bug causing incorrect results in some cases of { } OPTIONAL { } when the LHS and RHS are disjoint i.e. no
    common variables (CORE-386)
+ - DELETE WHERE { } shorthand syntax was permitted to have a preceding WITH clause which was invalid SPARQL syntax (CORE-389)
 - Documentation
  - Minor tweak to Timeout properties to ensure all explicitly state that the unit is milliseconds (CORE-387)
 - Query
